<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >
    
    <LinearLayout
        android:id="@+id/mycourse_current"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F8F8F8">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/text_current"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="#317BDC"            		  	    
	            android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingLeft="-5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:src="@drawable/course1" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:orientation="vertical"
                android:paddingLeft="5dp" >
		        
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/course1_title"
		            android:textSize="16dp"
		            android:textStyle="bold" />

		     	<TextView
		     	    android:layout_width="match_parent"
		     	    android:layout_height="fill_parent"
		     	    android:layout_weight="1"
		     	    android:text="@string/course1_teacher"
		     	    android:textColor="#949292"
		     	    android:textStyle="bold" />
               
		    </LinearLayout>

            <ImageButton
                android:id="@+id/course1_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.9"

                android:background="@null"
                android:paddingTop="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/button_arrow_right" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingLeft="-5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:src="@drawable/course2" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:orientation="vertical"
                android:paddingLeft="5dp" >
		        
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/course2_title"
		            android:textSize="16dp"
		            android:textStyle="bold" />

		     	<TextView
		     	    android:layout_width="match_parent"
		     	    android:layout_height="fill_parent"
		     	    android:layout_weight="1"
		     	    android:text="@string/course2_teacher"
		     	    android:textColor="#949292"
		     	    android:textStyle="bold" />
               
		    </LinearLayout>

            <ImageButton
                android:id="@+id/course2_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.9"
                android:background="@null"
                android:paddingTop="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/button_arrow_right" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingLeft="-5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:src="@drawable/course3" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:orientation="vertical"
                android:paddingLeft="5dp" >
		        
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/course3_title"
		            android:textSize="16dp"
		            android:textStyle="bold" />

		     	<TextView
		     	    android:layout_width="match_parent"
		     	    android:layout_height="fill_parent"
		     	    android:layout_weight="1"
		     	    android:text="@string/course3_teacher"
		     	    android:textColor="#949292"
		     	    android:textStyle="bold" />
               
		    </LinearLayout>

            <ImageButton
                android:id="@+id/course3_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.9"
                android:background="@null"
                android:paddingTop="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/button_arrow_right" />
            
        </LinearLayout>
        
    </LinearLayout>
        
    <LinearLayout
        android:id="@+id/mycourse_upcoming"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.8"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F8F8F8">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/text_upcoming"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="#317BDC"            		  	    
	            android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingLeft="-5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:src="@drawable/course4" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:orientation="vertical"
                android:paddingLeft="5dp" >
		        
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/course4_title"
		            android:textSize="16dp"
		            android:textStyle="bold" />

		     	<TextView
		     	    android:layout_width="match_parent"
		     	    android:layout_height="fill_parent"
		     	    android:layout_weight="1"
		     	    android:text="@string/course4_teacher"
		     	    android:textColor="#949292"
		     	    android:textStyle="bold" />
               
		    </LinearLayout>

            <ImageButton
                android:id="@+id/course4_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.9"
                android:adjustViewBounds="true"
                android:background="@null"
                android:paddingTop="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/button_arrow_right" />
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingLeft="-5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:src="@drawable/course5" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:orientation="vertical"
                android:paddingLeft="5dp" >
		        
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="fill_parent"
		            android:layout_weight="1"
		            android:text="@string/course5_title"
		            android:textSize="16dp"
		            android:textStyle="bold" />

		     	<TextView
		     	    android:layout_width="match_parent"
		     	    android:layout_height="fill_parent"
		     	    android:layout_weight="1"
		     	    android:text="@string/course5_teacher"
		     	    android:textColor="#949292"
		     	    android:textStyle="bold" />
               
		    </LinearLayout>

            <ImageButton
                android:id="@+id/course5_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.9"
                android:adjustViewBounds="true"
                android:background="@null"
                android:paddingTop="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/button_arrow_right" />
            
        </LinearLayout>

    </LinearLayout>
        
    <LinearLayout
        android:id="@+id/course_teach"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.8"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#F8F8F8">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/text_teach"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="#317BDC"            		  	    
	            android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingLeft="-5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:src="@drawable/course6" />
            
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="match_parent"
		        android:text="@string/course6_title"
		        android:textSize="16dp"
		        android:textStyle="bold" 
		        android:layout_weight="0.6"
		        android:paddingTop="8dp"
		        android:paddingLeft="5dp" />

            <ImageButton
                android:id="@+id/course6_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.9"
                android:adjustViewBounds="true"
                android:background="@null"
                android:padding="4dp"
                android:scaleType="centerInside"
                android:src="@drawable/button_arrow_right" />
            
        </LinearLayout>

        <Button
            android:id="@+id/button_createcourse"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.1"
            android:background="#0595D7"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_createcourse"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </LinearLayout>
    

</LinearLayout>
