<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.sjsu.onlinecommunity.MainActivity" >
    
    <LinearLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.4"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/logo_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="45dp"
                android:src="@drawable/logo_word" 
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_view"
                android:layout_marginTop="-25.0dip" 
                android:src="@drawable/logo_mission" 
                android:layout_marginRight="15.0dip" 
                android:layout_marginLeft="15.0dip" 
                android:layout_centerHorizontal="true" />
            
            <LinearLayout 
                android:orientation="horizontal" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:layout_marginTop="10.0dip" 
                android:layout_marginBottom="10.0dip" 
                android:layout_alignParentBottom="true">
                
                <FrameLayout 
                    android:layout_width="0.0dip" 
                    android:layout_height="50.0dip" 
                    android:layout_weight="1.0">
                	<Button 
                	    android:id="@+id/sign_up_button"
                	    android:textStyle="bold" 
                	    android:textColor="#FFFFFF"
                	    android:background="#1569C7"
                	    android:layout_marginRight="2.0dip" 
                	    android:layout_width="fill_parent" 
                	    android:layout_height="fill_parent" 
                	    android:text="@string/sign_up_caps" />
            	</FrameLayout>
            	<FrameLayout 
            	    android:layout_width="0.0dip" 
            	    android:layout_height="50.0dip" 
            	    android:layout_weight="1.0">
                	<Button 
                	    android:id="@+id/login_button"
                	    android:textStyle="bold" 
                	    android:textColor="#FFFFFF"
                	    android:background="#1569C7"
                	    android:layout_marginLeft="2.0dip" 
                	    android:layout_width="fill_parent" 
                	    android:layout_height="fill_parent" 
                	    android:text="@string/login_caps" />
            	</FrameLayout>      
             </LinearLayout>	   
        </RelativeLayout>
	            
	  	<RelativeLayout   	        
	  	        android:orientation="vertical" 
	  	        android:layout_width="fill_parent" 
	  	        android:layout_height="wrap_content" 
	  	        android:background="#F8F8F8"
	  	        android:layout_weight="0.12"
	  	        android:baselineAligned="true">
	            	
	  	        <ImageButton
	  	            android:id="@+id/facebook_login_button"
	  	            android:layout_width="wrap_content"
	  	            android:layout_height="wrap_content"
	  	            android:layout_centerHorizontal="true"
	  	            android:layout_marginTop="30.0dip"
	  	            android:background="@null"
	  	            android:src="@drawable/login_facebook" />
	  	        
	  	        <TextView 
	  	            android:id="@+id/or_textview"
	  	            android:textSize="12.0sp" 
					android:layout_centerHorizontal="true"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
					android:layout_below="@+id/facebook_login_button"
					android:layout_marginTop="2.0dip" 
					android:text="@string/or"/>
	  	        
	  	       <ImageButton
	  	           android:id="@+id/twitter_login_button"
	  	           android:layout_width="wrap_content"
	  	           android:layout_height="wrap_content"
	  	           android:layout_below="@+id/or_textview"
	  	           android:layout_centerHorizontal="true"
	  	           android:layout_marginTop="2.0dip"
	  	           android:background="@null"
	  	           android:baselineAligned="true"
	  	           android:src="@drawable/login_twitter" />
	  	          	        
		</RelativeLayout> 	

	  	
    </LinearLayout>
</RelativeLayout>